@@ -106,6 +106,7 @@ D. Docs about JS interface
 8. Docs about 'connect'
 9. user-defined functions fn1()...fn9() at formula evaluation, like "fn1(3)\x^_1" will produce "x^3".
 10. Docs about 'lines'
+11. Docs about Armadillo interface
 
 
 ZZ. Update time.texi {before release!!!}
